Adjust CSS to fix video alignment during full screen

--- a/src/esl_facebook_client/app/css/main.css
+++ b/src/esl_facebook_client/app/css/main.css
@@ -134,6 +134,7 @@ a:hover {
 
 .col-md-9 video {
     width: 100%;
+    height: 100%;
 }
 
 .col-md-9 {
